# Bootleg_Mario

./: CMakeLists.txt  Game.cpp  Game.h
Animation/: Animation.cpp  Animation.h  AnimationData.h  AnimationType.h
Collision/: Collidable.h  Collision.cpp
Components/: Component.h
Components/BackGround/: Background.cpp  Background.h
Components/Block/: Block.cpp  Block.h
Components/PhysicsSprite/: PhysicsModel.cpp  PhysicsModel.h  PhysicsSprite.cpp  PhysicsSprite.h  PhysicsSpriteController.cpp  PhysicsSpriteController.h  PhysicsSpriteType.h  SpriteView.cpp  SpriteView.h
Components/Pipe/: Pipe.cpp  Pipe.h
Components/Platform/: Platform.cpp  Platform.h  PlatformController.cpp  PlatformController.h
Components/Player/: Player.cpp  Player.h
Components/SpecialBlock/: SpecialBlock.cpp  SpecialBlock.h
GameLogic/: AirResistance.h  Force.cpp  Force.h  Friction.h  Gravity.h
KeyboardControls/: KeyboardControllable.h  PlayerControls.h
States/: MainGameState.cpp  MainGameState.h  State.h  StateManager.cpp  StateManager.h
TextureManager/: TextureManager.cpp  TextureManager.h
